--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,17 @@
 .box-header p{
     color: var(--text-secondary-colour);
 }
-.main-box span{
+.box-header + span{
     font-size: 1.2rem;
     font-weight: bold;
+}
+
+.box-body{
+    width: 100%;
+    height: 16rem;
+    border: 2px solid red;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;  
+    -webkit-overflow-scrolling: touch; 
 }
