--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,12 @@
   --bg-secondary-colour:#F0F8FF;
   --text-primary-colour:#000000;
   --text-secondary-colour:#757575;
+  --border-primary-colour:#000000;
   --btn-primary:#3B82F6;
   --btn-danger:#FF5252;
   --box-primary-colour:#FFFFFF;
   --box-secondary-colour:#ECEFF1;
-  --bg-overflow-colour:#D9D9D9;
+  --bg-overflow-colour:#d9d9d96e;
   --box-padding:20px 35px;
   --box-margin:10px;
   --box-round:15px;
@@ -40,6 +41,13 @@ h1{
   color: white;
   border: none;
   background-color: var(--btn-primary);
+  border-radius: 5px;
+  cursor: pointer;
+}
+.bth-danger{
+  color: white;
+  border: none;
+  background-color: var(--btn-danger);
   border-radius: 5px;
   cursor: pointer;
 }
