--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,17 @@ h1{
   font-size: 2rem;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+  outline: none;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 .bth-primary{
   color: white;
   border: none;
