--- a/src/styles/grades.module.css
+++ b/src/styles/grades.module.css
@@ -44,8 +44,13 @@
     border-radius: 5px;
 }
 
-.gradesContainer > button{
+.gradesActions{
+    width: 100%;
     margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.gradesActions  > button{
     padding: 10px 20px;
-    align-self: self-start;
 }
