Showing SUB in Result

--- a/src/styles/calculatepopup.module.css
+++ b/src/styles/calculatepopup.module.css
@@ -38,6 +38,9 @@
     width: 2rem;
     text-align: center;
 }
+.caulateTableList > table p{
+    color: var(--text-secondary-colour);
+}
 
 .calculateResults{
     width: 100%;
